@@ -47,7 +47,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9403,
         128, 128,    // 16K flash 
         4,   128,    // 512 bytes EEPROM
-	0x2a,	     // 21 interrupt vectors
+        0x54,        // 21 interrupt vectors
         atmega16_io_registers,
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -76,7 +76,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9404,
         128, 128,    // 16K flash 
         4,   128,    // 512 bytes EEPROM
-	0x38,	     // 28 interrupt vectors
+        0x70,        // 28 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -105,7 +105,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9405,
         128, 128,    // 16K flash 
         4,   128,    // 512 bytes EEPROM
-	0x2e,	     // 23 interrupt vectors
+        0x5c,        // 23 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -134,7 +134,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9501,
         128, 256,    // 32K flash 
         4,   256,    // 1K EEPROM
-	0x28,	     // 20 interrupt vectors
+        0x50,        // 20 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -163,7 +163,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9502,
         128, 256,    // 32K flash 
         4,   256,    // 1K EEPROM
-	0x2a,	     // 21 interrupt vectors
+        0x54,        // 21 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -193,7 +193,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9602,
         256, 256,    // 32K flash 
         8,   256,    // 2K EEPROM
-	0x46,	     // 35 interrupt vectors
+        0x8c,        // 35 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -222,7 +222,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x9702,
         128, 128,    // 16K flash 
         4,   128,    // 512 bytes EEPROM
-	0x46,	     // 35 interrupt vectors
+        0x8c,        // 35 interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -252,6 +252,7 @@ jtag_device_def_type deviceDefinitions[] = {
         0x0,
         256, 512,    // 128K flash 
         8,   512,    // 4K EEPROM
+        0x00,        // interrupt vectors
         NULL,        // io reg defs not defined yet
         {
             JTAG_C_SET_DEVICE_DESCRIPTOR,
@@ -277,13 +278,13 @@ jtag_device_def_type deviceDefinitions[] = {
 #endif
     // Termination record.
     { 
-        NULL,
-        0,
-        0, 0,
-        0, 0,
-	0,
-        NULL,
-        { 0 }
+        NULL,                   // name
+        0,                      // id
+        0, 0,                   // flash
+        0, 0,                   // eeprom
+        0,                      // interrupt vectors
+        NULL,                   // io reg defs
+        { 0 }                   // device descriptor information
     }
 };
 
